<menu xmlns:android="http://schemas.android.com/apk/res/android" >

	<item
        android:id="@+id/action_erase_all"
        android:showAsAction="never"
        android:title="@string/action_erase_all" /> <!--  android:onClick="menu_eraseAllTodos"  -->
    
    
    <item
        android:id="@+id/action_erase_checked"
        android:showAsAction="never"
        android:title="@string/action_erase_checked" /> <!--  android:onClick="menu_eraseCheckedTodos"  -->
    
    
        
    <item 
        android:id="@+id/action_change_font" 
        android:title="@string/action_change_font" 
        android:checkable="false"  android:showAsAction="never"/> <!--  android:onClick="menu_changeFontSize"  -->
        
    <item android:id="@+id/action_auto_keyboard" android:title="@string/action_auto_keyboard" android:checkable="true" android:showAsAction="never" /> <!--  android:onClick="menu_changeAutoKeyboard"  -->
    <item android:id="@+id/action_colorblind_mode" android:title="@string/action_colorblind_mode" android:checked="false" android:checkable="true"/> <!--  android:onClick="menu_changeColorblind" -->
    <item android:id="@+id/action_help" android:title="@string/action_show_help"  android:orderInCategory="100"/> <!--  android:onClick="menu_showHelp"  -->
    <item android:id="@+id/action_erase_text" android:showAsAction="always" android:title="@string/action_erase_text"/> <!--  android:onClick="menu_erase_text"  -->
    <item android:id="@+id/action_import_export" android:title="@string/action_import_export"></item> 
    
</menu>
