<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >

		<TextView
		    android:id="@+id/textView1"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/label_add"
		    android:textAppearance="?android:attr/textAppearanceMedium" />

		<Button
		    android:id="@+id/edit_button_critical"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="21"
		    android:onClick="addTodoItemCritical"
		    android:text="@string/button_add_critical"
		    android:textAppearance="?android:attr/textAppearanceSmallInverse" />

		<Button
		    android:id="@+id/edit_button_important"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="21"
		    android:onClick="addTodoItemImportant"
		    android:text="@string/button_add_important"
		    android:textAppearance="?android:attr/textAppearanceSmallInverse" />
	    
	    <Button
	        android:id="@+id/edit_button_normal"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="21"
	        android:onClick="addTodoItemNormal"
	        android:text="@string/button_add_normal"
	        android:textAppearance="?android:attr/textAppearanceSmallInverse" />

	</LinearLayout>

	<EditText
	    android:id="@+id/edit_message"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:ems="10"
	    android:hint="@string/edit_message" />

	<ListView
	    android:id="@+id/TodoList"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >
	</ListView>

</LinearLayout>
